# ai-stock-arena

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
config/: defaults.toml
deploy/oracle/: bootstrap-server.sh  deploy-update.sh
deploy/oracle/logrotate/: ai-stock-arena
deploy/oracle/nginx/: ai-stock-arena.conf
deploy/oracle/systemd/: ai-stock-arena-api.service  ai-stock-arena-dashboard.service  ai-stock-arena-scheduler.service  ai-stock-arena-watchdog.service  ai-stock-arena-watchdog.timer
docs/: first-release-overview.md  runtime-admin-guide.md  step-01-system-spec.md  step-02-local-github-flow.md  step-03-oracle-deployment.md
scripts/: install-background-tasks.ps1  restart-background-services.ps1  run-api.ps1  run-dashboard.ps1  run-scheduler.ps1  service-api.ps1  service-dashboard.ps1  service-scheduler.ps1  ssh-oracle-safe.bat  ssh-oracle-safe.ps1  ssh-oracle.ps1  start-background-services.ps1  start-background-tasks.ps1  start-local-hidden.vbs  start-local.cmd  start-local.ps1  status-background-services.ps1  status-background-tasks.ps1  stop-background-tasks.ps1  uninstall-background-tasks.ps1
scripts/linux/: add-free-models.sh  run-api.sh  run-dashboard.sh  run-scheduler.sh  sync-free-models.sh  watchdog.sh
src/: README.md
src/app/: __init__.py
src/app/api/: main.py  query_service.py  schemas.py
src/app/cli/: __init__.py  bootstrap.py  llm.py  market.py  models.py  news.py  scheduler.py
src/app/config/: loader.py  models.py
src/app/dashboard/: app.py  main.py
src/app/db/: base.py  (+2 more)
(+26 files in other folders)
