[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-stock-arena"
version = "0.1.0"
description = "LLM virtual trading benchmark for KOSPI, KOSDAQ, and US equities."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14.0",
  "fastapi>=0.116.0",
  "httpx>=0.28.0",
  "orjson>=3.10.0",
  "pandas>=2.3.0",
  "pydantic-settings>=2.10.0",
  "psycopg[binary]>=3.2.0",
  "python-dotenv>=1.1.0",
  "sqlalchemy>=2.0.35",
  "streamlit>=1.48.0",
  "typer>=0.16.0",
  "uvicorn>=0.35.0",
  "yfinance>=0.2.65",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "ruff>=0.12.0",
]

[project.scripts]
ai-stock-arena-bootstrap = "app.cli.bootstrap:run"
ai-stock-arena-market = "app.cli.market:run_screen"
ai-stock-arena-llm = "app.cli.llm:run_llm"
ai-stock-arena-models = "app.cli.models:run_models"
ai-stock-arena-scheduler = "app.cli.scheduler:run_scheduler_cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
